# vietnamese-program-language

./: .gitignore  README.md
.github/workflows/: codeql.yml
compiler/: Cargo.toml
compiler/src/: main.rs
compiler/src/compiler/: helper.rs  mod.rs
compiler/src/parse/: mod.rs
compiler/src/util/: append_vec.rs  mod.rs
config/: keyword.config  keyword.xml
src/: getConfig.c  keyword.config  main.c  main.py  process.c  string.util.c  variable.c  xmlConverter.c
test/: hello.vipl
