[package]
name = "compiler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
inkwell = { git = "https://github.com/TheDan64/inkwell", version = "0.1.0", features = ["llvm14-0"] }
lazy_static = "1.4.0"
regex = "1.7.0"

